--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   shimmer: ^2.0.0
   provider: ^6.0.2
   firebase_auth: ^3.3.5
+  flutter_local_notifications: ^5.0.0
+  timezone: ^0.7.0
 
 
 dev_dependencies:
